--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "private": true,
   "scripts": {
     "build": "rm -rf dist && webpack --mode development --config webpack.server.config.js",
-    "start": "yarn build; node ./public/server.js",
+    "start": "yarn build && node ./public/server.js",
     "test": "jest"
   },
   "dependencies": {
